add favicon, fix mobile menu

--- a/sass/custom/_page-career.scss
+++ b/sass/custom/_page-career.scss
@@ -186,6 +186,10 @@
                 font-weight: normal;
                 font-size: 3em;
             }
+
+            span {
+                font-weight: 600;
+            }
         }
 
         form {
