--- a/sass/custom/_header.scss
+++ b/sass/custom/_header.scss
@@ -52,6 +52,10 @@
             border-radius: 10px;
         }
 
+        .with-child>a {
+            cursor: default;
+        }
+
         a {
             color: #282828;
         }
@@ -80,7 +84,27 @@
             position: absolute;
             top: 75px;
             background-color: #fff;
+            border-radius: 10px;
             box-shadow: 0 3px 6px rgba(0, 0, 0, .2);
+
+            #primary-menu {
+                padding: 16px;
+
+                &>li {
+                    margin-left: 0;
+                    display: flex;
+                    flex-direction: column;
+                    padding: 5px;
+                }
+
+                .sub-menu {
+                    position: relative;
+                    left: auto;
+                    box-shadow: none;
+                    border-left: 1px solid #bbb;
+                }
+            }
+
         }
     }
 }
