--- a/style.css
+++ b/style.css
@@ -841,6 +841,10 @@ a.btn-main.xl {
 	border-radius: 10px;
 }
 
+#masthead #primary-menu .with-child > a {
+	cursor: default;
+}
+
 #masthead #primary-menu a {
 	color: #282828;
 }
@@ -867,7 +871,23 @@ a.btn-main.xl {
 		position: absolute;
 		top: 75px;
 		background-color: #fff;
+		border-radius: 10px;
 		box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+	}
+	#masthead .menu-main-menu-container #primary-menu {
+		padding: 16px;
+	}
+	#masthead .menu-main-menu-container #primary-menu > li {
+		margin-left: 0;
+		display: flex;
+		flex-direction: column;
+		padding: 5px;
+	}
+	#masthead .menu-main-menu-container #primary-menu .sub-menu {
+		position: relative;
+		left: auto;
+		box-shadow: none;
+		border-left: 1px solid #bbb;
 	}
 }
 
@@ -1926,6 +1946,10 @@ a.btn-main.xl {
 .main-career section.section-form .img h1 {
 	font-weight: normal;
 	font-size: 3em;
+}
+
+.main-career section.section-form .img span {
+	font-weight: 600;
 }
 
 .main-career section.section-form form {
