fix line height

--- a/style.css
+++ b/style.css
@@ -1019,6 +1019,7 @@ a.btn-main.xl {
 
 .main-home section.cta-secondHope p {
 	font-size: 20px;
+	line-height: 1.2;
 }
 
 .main-home section.cta-secondHope h1,
