--- a/sass/custom/_global.scss
+++ b/sass/custom/_global.scss
@@ -74,3 +74,82 @@ a.btn-main {
         padding: 10px 40px;
     }
 }
+
+
+// MODAL
+.modal-container {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .75);
+    backdrop-filter: blur(5px);
+
+    &.active {
+        display: flex;
+    }
+
+    .modal-content-container {
+        margin-left: 10%;
+        margin-right: 10%;
+        max-width: 600px;
+        padding: 20px;
+        border-radius: 20px;
+        background-color: #fff;
+        position: relative;
+    }
+
+    a {
+        display: block;
+    }
+
+    img {
+        display: block;
+        border-radius: 14px;
+    }
+
+    svg {
+        opacity: .2;
+    }
+
+    button {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        right: -20px;
+        top: -20px;
+        border: none;
+        padding: 0;
+        width: 40px;
+        height: 40px;
+        line-height: 1;
+        border-radius: 50px;
+        font-size: 28px;
+        background-color: #f3b126;
+        box-shadow: 0 3px 3px rgba(0, 0, 0, .2);
+    }
+}
+
+
+// OWL CAROUSEL
+.owl-carousel {
+    button.owl-dot {
+        width: 10px;
+        height: 10px;
+        margin: 0 4px;
+        border-radius: 50px;
+        background-color: rgba(0, 0, 0, .2);
+
+        &.active {
+            background-color: #dd9d12;
+            cursor: default;
+        }
+    }
+}
