--- a/sass/custom/_page-home.scss
+++ b/sass/custom/_page-home.scss
@@ -183,9 +183,10 @@
 
         .dots-bg {
             position: absolute;
-            height: 80%;
+            height: 400px;
+            width: auto;
             top: -3%;
-            left: -20%;
+            left: -150px;
             opacity: .6;
         }
     }
@@ -303,66 +304,6 @@
         }
     }
 
-    .modal-container {
-        display: none;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        z-index: 100;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, .75);
-        backdrop-filter: blur(5px);
-
-        &.active {
-            display: flex;
-        }
-
-        .modal-content-container {
-            margin-left: 10%;
-            margin-right: 10%;
-            max-width: 600px;
-            padding: 20px;
-            border-radius: 20px;
-            background-color: #fff;
-            position: relative;
-        }
-
-        a {
-            display: block;
-        }
-
-        img {
-            display: block;
-            border-radius: 14px;
-        }
-
-        svg {
-            opacity: .2;
-        }
-
-        button {
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            right: -20px;
-            top: -20px;
-            border: none;
-            padding: 0;
-            width: 40px;
-            height: 40px;
-            line-height: 1;
-            border-radius: 50px;
-            font-size: 28px;
-            background-color: #f3b126;
-            box-shadow: 0 3px 3px rgba(0, 0, 0, .2);
-        }
-    }
-
     @media (max-width: 992px) {
         section.cta-about {
             margin-bottom: 60px;
@@ -416,6 +357,8 @@
             .dots-bg {
                 top: auto;
                 bottom: -10px;
+                width: 200px;
+                left: -80px;
             }
         }
 
