--- a/sass/custom/_footer.scss
+++ b/sass/custom/_footer.scss
@@ -49,13 +49,19 @@
 
     .support-container {
         display: flex;
+        align-items: center;
         gap: 16px;
         margin: 10px 0 20px;
 
         img {
-            width: 40px;
-            height: 40px;
+            width: 60px;
+            height: auto;
             display: block;
+        }
+
+        img:last-child {
+            width: 160px;
+            height: auto;
         }
     }
 
