--- a/sass/custom/_page-career.scss
+++ b/sass/custom/_page-career.scss
@@ -235,6 +235,12 @@
             border: 1px solid #aaa;
         }
 
+        .email-note {
+            margin: 0;
+            font-style: italic;
+            opacity: .8;
+        }
+
         .form-alert-container {
             display: none;
             padding: 10px;
