--- a/sass/custom/_page-about.scss
+++ b/sass/custom/_page-about.scss
@@ -141,6 +141,7 @@
                 bottom: 0;
                 left: 0;
                 width: 100%;
+                min-height: 100px;
                 padding: 20px;
                 color: #fff;
                 background-color: rgba(243, 169, 57, .75);
