--- a/sass/custom/_page-home.scss
+++ b/sass/custom/_page-home.scss
@@ -60,7 +60,7 @@
 
         video {
             object-fit: cover;
-            width: 100vw;
+            width: 100%;
             height: 100vh;
             position: absolute;
             top: 0;
