--- a/style.css
+++ b/style.css
@@ -1395,7 +1395,7 @@ a.btn-main.xl {
 
 .main-home section.cta-secondHope video {
 	object-fit: cover;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	position: absolute;
 	top: 0;
